fix: Message about successfully signing up is being displayed correctly on smaller screens

--- a/src/app/modal-signed-up-info/modal-signed-up-info.component.scss
+++ b/src/app/modal-signed-up-info/modal-signed-up-info.component.scss
@@ -8,12 +8,11 @@
     color: white;
     font-size: larger;
     height: 100%;
-    text-align: justify;
+    text-align: center;
   }
   
-h2 {
+h2, h3 {
    margin-bottom: 20px;
-   font-size: 24px;
    color: #ffffff;
    text-shadow: 1px 1px #000000;
 }
